--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the hbnb project in this repository
 
-Mulugeta Tesfaw <mulugetatesfaw21@gmail.com>
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+~
+
